--- a/src/main/resources/templates/commons.html
+++ b/src/main/resources/templates/commons.html
@@ -18,7 +18,7 @@
         </ul>
     </nav>
 </div>
-<div th:fragment="footer" class="text-center">
+<div th:fragment="footer" class="text-center " style="bottom: 0;">
     <p>Copyright &copy; 2019.软件学院 16201533</p>
 </div>
 </body>
