--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,11 +5,39 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            大学选课系统登录界面
+<div class="container" id="particles" >
+    <div class="row">
+        <div class="col-md-12">
+            <h2 class="text-center animated bounceInDown">大学选课系统</h2>
+        </div>
+        <div class="col-md-12" style="margin-top: 100px">
+            <div class="row">
+                <form method="post" action="">
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">账号：</label>
+                        <input type="text" class="form-control" id="exampleInputEmail1" placeholder="account">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">密码：</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    </div>
+                    <div class="radio">
+                        <label class="radio-inline">
+                            <input type="radio" name="inlineRadioOptions" id="inlineRadio1" checked value="student"> 学生
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="professor"> 教授
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="registrar"> 管理员
+                        </label>
+                    </div>
+                    <button type="submit" class="btn btn-default btn-primary">登录</button>
+                </form>
+            </div>
         </div>
     </div>
+</div>
 
 <div th:replace="commons::footer"></div>
 
