--- a/src/main/resources/templates/1.html
+++ b/src/main/resources/templates/1.html
@@ -32,7 +32,7 @@
                             <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="registrar"> 管理员
                         </label>
                     </div>
-                    <button type="submit" class="btn btn-default btn-primary">登录</button>
+                    <button class="btn btn-default btn-primary">登录</button>
                 </form>
             </div>
         </div>
