完成管理员功能

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,7 +50,7 @@
 				if (200===result.code){
 					alert(result.extend.error)
 				}else {
-
+					top.location=result.extend.success;
 				}
 			}
 		})
