--- a/src/main/resources/templates/registrar/professor.html
+++ b/src/main/resources/templates/registrar/professor.html
@@ -1,64 +1,55 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="zh">
-<head th:replace="commons :: head('学院管理')">
+<head th:replace="commons :: head('教授管理')">
     <title>Messages : Create</title>
 </head>
 <body>
-<div th:insert="registrar/registrar::nav(2)">
+<div th:insert="registrar/registrar::nav(0)">
 </div>
-
 <div class="container">
     <div class="row">
-        <button class="btn btn-primary" data-toggle="modal" onclick="showModal(true)">增加学院</button>
+        <button class="btn btn-primary" data-toggle="modal" onclick="showModal(true)">增加教授</button>
         <div class="modal fade" id="modal">
             <div class="modal-dialog">
                 <div class="modal-content" style="width: 700px;">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
-                        <h4 class="modal-title">添加学院</h4>
+                        <h4 class="modal-title">教授管理</h4>
                     </div>
                     <div class="modal-body">
                         <form class="form-horizontal">
                             <div class="form-group">
-                                <label for="college_name_input" class="col-sm-2 control-label">学院名称：</label>
+                                <label for="professor_account_input" class="col-sm-2 control-label">教授账号：</label>
                                 <div class="col-sm-10">
-                                    <input type="text" name="collegeName" class="form-control" id="college_name_input"
-                                           placeholder="学院名称">
+                                    <input type="text" name="account" class="form-control" id="professor_account_input"
+                                           placeholder="教授账号">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="college_manager_input" class="col-sm-2 control-label">管理者：</label>
+                                <label for="professor_password_input" class="col-sm-2 control-label">账号密码：</label>
                                 <div class="col-sm-10">
-                                    <input type="text" name="manager" class="form-control" id="college_manager_input"
-                                           placeholder="管理者">
+                                    <input type="password" name="password" class="form-control" id="professor_password_input"
+                                           placeholder="账号密码">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="college_address_input" class="col-sm-2 control-label">学院地址：</label>
+                                <label for="professor_name_input" class="col-sm-2 control-label">教授姓名：</label>
                                 <div class="col-sm-10">
-                                    <input type="text" name="address" class="form-control" id="college_address_input"
-                                           placeholder="学院地址">
+                                    <input type="text" name="name" class="form-control" id="professor_name_input"
+                                           placeholder="教授姓名">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="college_degreeName_input" class="col-sm-2 control-label">学位名称：</label>
+                                <label for="professor_collegeId_input" class="col-sm-2 control-label">学院名称：</label>
                                 <div class="col-sm-10">
-                                    <input type="text" name="degreeName" class="form-control"
-                                           id="college_degreeName_input" placeholder="学位名称">
+                                    <select class="form-control" id="professor_collegeId_input" name="collegeId"></select>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="college_score_input" class="col-sm-2 control-label">学位总学分：</label>
+                                <label for="professor_phone_input" class="col-sm-2 control-label">手机号：</label>
                                 <div class="col-sm-10">
-                                    <input type="number" name="score" class="form-control" id="college_score_input"
-                                           placeholder="学位总学分">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="college_studyTime_input" class="col-sm-2 control-label">学位总学时：</label>
-                                <div class="col-sm-10">
-                                    <input type="number" name="studyTime" class="form-control"
-                                           id="college_studyTime_input" placeholder="学位总学时">
+                                    <input type="text" name="phone" class="form-control" id="professor_phone_input"
+                                           placeholder="手机号">
                                 </div>
                             </div>
                         </form>
@@ -75,13 +66,12 @@
         <table id="table" class="table table-responsive table-hover">
             <thead>
             <tr>
-                <td>学院id</td>
+                <td>教授id</td>
+                <td>教授账号</td>
+                <td>账号密码</td>
+                <td>教授姓名</td>
+                <td>手机号</td>
                 <td>学院名称</td>
-                <td>管理者</td>
-                <td>学院地址</td>
-                <td>学位名称</td>
-                <td>学位总学分</td>
-                <td>学位总学时</td>
                 <td>操作</td>
             </tr>
             </thead>
@@ -107,7 +97,7 @@
             var data=$("#modal form").serialize();
             if (!add){data+="&id="+click_id}
             $.ajax({
-                url: add?'addCollege':'modifyCollege',
+                url: add?'addProfessor':'modifyProfessor',
                 data: data,
                 type: 'post',
                 success: function (result) {
@@ -122,7 +112,7 @@
         });
         function toPageNum(page) {
             $.ajax({
-                url: "getColleges",
+                url: "getProfessors",
                 data: "page=" + page,
                 type: "get",
                 success: function (result) {
@@ -137,18 +127,17 @@
             $("#table tbody").empty();
             $.each(result, function (index, item) {
                 var id = $("<td></td>").append(item.id);
-                var collegeName = $("<td></td>").append(item.collegeName);
-                var manager = $("<td></td>").append(item.manager);
-                var address = $("<td></td>").append(item.address);
-                var degreeName = $("<td></td>").append(item.degreeName);
-                var score = $("<td></td>").append(item.score);
-                var studyTime = $("<td></td>").append(item.studyTime);
+                var account = $("<td></td>").append(item.account);
+                var password = $("<td></td>").append(item.password);
+                var name = $("<td></td>").append(item.name);
+                var phone = $("<td></td>").append(item.phone);
+                var college = $("<td></td>").append(item.college.collegeName);
                 var editBtn = $("<button></button>").addClass("btn btn-primary btn-sm edit_btn")
                     .append($("<span></span>").addClass("glyphicon glyphicon-edit")).append("编辑");
                 var trashBtn = $("<button></button>").addClass("btn btn-danger btn-sm trash_btn")
                     .append($("<span></span>").addClass("glyphicon glyphicon-trash")).append("删除");
                 var btnTd = $("<td></td>").append(editBtn, " ", trashBtn);
-                $("<tr></tr>").append(id, collegeName, manager, address, degreeName, score, studyTime, btnTd).appendTo("#table tbody").attr("item_id",item.id);
+                $("<tr></tr>").append(id, account, password, name, phone, college, btnTd).appendTo("#table tbody").attr("item_id",item.id);
             })
         }
         //构建分页信息
@@ -192,15 +181,16 @@
         $(document).on("click",".edit_btn",function(){
             click_id=$(this).parent().parent().attr("item_id");
             $.ajax({
-                url: 'getCollege?id='+click_id,
+                url: 'getProfessor?id='+click_id,
                 type: 'get',
                 success: function (result) {
                     var data=result.extend.data;
                     if (result.code === 100) {
-                        showModal(false,data.collegeName,data.manager,data.address,data.degreeName,data.score,data.studyTime);
+                        showModal(false,data.account,data.password,data.name,data.phone,data.college.id);
                     }
                 }
             })
+
         });
         //删除
         $(document).on("click",".trash_btn",function(){
@@ -208,7 +198,7 @@
             var name = $(this).parents("tr").find("td:eq(1)").text();
             if(confirm("确定删除"+name+"吗？")){
                 $.ajax({
-                    url: 'deleteCollege?id='+click_id,
+                    url: 'deleteProfessor?id='+click_id,
                     type: 'get',
                     success: function (result) {
                         toPageNum(curPage);
@@ -217,14 +207,29 @@
                 })
             }
         });
-        function showModal(b,p1,p2,p3,p4,p5,p6) {
+        function showModal(b,p1,p2,p3,p4,p5) {
             add=b;
-            $("#college_name_input").val(p1);
-            $("#college_manager_input").val(p2);
-            $("#college_address_input").val(p3);
-            $("#college_degreeName_input").val(p4);
-            $("#college_score_input").val(p5);
-            $("#college_studyTime_input").val(p6);
+            $("#professor_account_input").val(p1);
+            $("#professor_password_input").val(p2);
+            $("#professor_name_input").val(p3);
+            $("#professor_phone_input").val(p4);
+            $.ajax({
+                url: 'getAllColleges',
+                type: 'get',
+                success: function (result) {
+                    $('#professor_collegeId_input').empty();
+                    var data=result.extend.data;
+                    if (result.code === 100) {
+                        $.each(data,function(){
+                            var optionEle = $("<option></option>").append(this.collegeName).attr("value",this.id);
+                            if(!add&&p5===this.id){
+                                optionEle.attr("selected","selected");
+                            }
+                            optionEle.appendTo('#professor_collegeId_input');
+                        });
+                    }
+                }
+            });
             $("#modal").modal({
                 backdrop:"static"
             });
