--- a/src/main/resources/templates/registrar/registrar.html
+++ b/src/main/resources/templates/registrar/registrar.html
@@ -1,53 +1,38 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="zh">
-<head th:replace="commons :: head('管理员')">
+<head th:replace="registrar :: head('学院管理')">
     <title>Messages : Create</title>
 </head>
 <body>
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">大学课程管理系统</a>
-        </div>
-
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">教授管理 <span class="sr-only">(current)</span></a></li>
-                <li><a href="#">学生管理</a></li>
-                <li><a href="#">学院管理</a></li>
-                <li><a href="#">课程管理</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">注销</a></li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
-<div class="container">
-    <div class="row">
-        <table class="table table-responsive table-hover">
-            <thead>
-            <tr>教授id</tr>
-            <tr>教授账号</tr>
-            <tr>教授密码</tr>
-            <tr>教授姓名</tr>
-            <tr>教授学院</tr>
-            <tr>手机号</tr>
-            </thead>
-            <tbody>
-
-            </tbody>
-        </table>
-    </div>
-    <script>
-
-    </script>
+<div>
+    <nav th:fragment="nav(index)" class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">大学课程管理系统</a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li th:class="${index}==0?'active':''"><a href="/registrar/professor">教授管理</a></li>
+                    <li th:class="${index}==1?'active':''"><a href="/registrar/student">学生管理</a></li>
+                    <li th:class="${index}==2?'active':''"><a href="/registrar/college">学院管理</a></li>
+                    <li th:class="${index}==3?'active':''"><a href="/registrar/course">课程管理</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a th:text="${session.user.account}"></a></li>
+                    <li><a href="/logout">注销</a></li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
 </div>
+
+
 </body>
 </html>
