--- a/src/main/resources/templates/registrar/college.html
+++ b/src/main/resources/templates/registrar/college.html
@@ -98,6 +98,7 @@
             </nav>
         </div>
     </div>
+    <div th:replace="commons::footer"></div>
     <script>
         var click_id,curPage,total,add;
         $(function () {
