--- a/src/main/resources/templates/registrar/student.html
+++ b/src/main/resources/templates/registrar/student.html
@@ -104,6 +104,7 @@
             </nav>
         </div>
     </div>
+    <div th:replace="commons::footer"></div>
     <script>
         var click_id,curPage,total,add;
         $(function () {
