--- a/src/main/resources/templates/student/study.html
+++ b/src/main/resources/templates/student/study.html
@@ -1,55 +1,72 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="zh">
-<head th:replace="commons :: head('教授管理')">
+<head th:replace="commons :: head('制定学习计划')">
     <title>Messages : Create</title>
 </head>
 <body>
-<div th:insert="registrar/registrar::nav(0)">
+<div th:insert="student/student::nav(0)">
 </div>
+
 <div class="container">
     <div class="row">
-        <button class="btn btn-primary" data-toggle="modal" onclick="showModal(true)">增加教授</button>
+        <ol class="breadcrumb">
+            <li><a href="#">Home</a></li>
+            <li class="active"><a href="#">Library</a></li>
+            <li>Data</li>
+        </ol>
+    </div>
+
+    <div class="row">
+        <button class="btn btn-primary" data-toggle="modal" onclick="addStudy()">新建学习计划</button>
         <div class="modal fade" id="modal">
             <div class="modal-dialog">
                 <div class="modal-content" style="width: 700px;">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
-                        <h4 class="modal-title">教授管理</h4>
+                        <h4 class="modal-title">添加学院</h4>
                     </div>
                     <div class="modal-body">
                         <form class="form-horizontal">
                             <div class="form-group">
-                                <label for="professor_account_input" class="col-sm-2 control-label">教授账号：</label>
+                                <label for="college_name_input" class="col-sm-2 control-label">学院名称：</label>
                                 <div class="col-sm-10">
-                                    <input type="text" name="account" class="form-control" id="professor_account_input"
-                                           placeholder="教授账号">
+                                    <input type="text" name="collegeName" class="form-control" id="college_name_input"
+                                           placeholder="学院名称">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="professor_password_input" class="col-sm-2 control-label">账号密码：</label>
+                                <label for="college_manager_input" class="col-sm-2 control-label">管理者：</label>
                                 <div class="col-sm-10">
-                                    <input type="password" name="password" class="form-control" id="professor_password_input"
-                                           placeholder="账号密码">
+                                    <input type="text" name="manager" class="form-control" id="college_manager_input"
+                                           placeholder="管理者">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="professor_name_input" class="col-sm-2 control-label">教授姓名：</label>
+                                <label for="college_address_input" class="col-sm-2 control-label">学院地址：</label>
                                 <div class="col-sm-10">
-                                    <input type="text" name="name" class="form-control" id="professor_name_input"
-                                           placeholder="教授姓名">
+                                    <input type="text" name="address" class="form-control" id="college_address_input"
+                                           placeholder="学院地址">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="professor_collegeId_input" class="col-sm-2 control-label">学院名称：</label>
+                                <label for="college_degreeName_input" class="col-sm-2 control-label">学位名称：</label>
                                 <div class="col-sm-10">
-                                    <select class="form-control" id="professor_collegeId_input" name="collegeId"></select>
+                                    <input type="text" name="degreeName" class="form-control"
+                                           id="college_degreeName_input" placeholder="学位名称">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="professor_phone_input" class="col-sm-2 control-label">手机号：</label>
+                                <label for="college_score_input" class="col-sm-2 control-label">学位总学分：</label>
                                 <div class="col-sm-10">
-                                    <input type="text" name="phone" class="form-control" id="professor_phone_input"
-                                           placeholder="手机号">
+                                    <input type="number" name="score" class="form-control" id="college_score_input"
+                                           placeholder="学位总学分">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="college_studyTime_input" class="col-sm-2 control-label">学位总学时：</label>
+                                <div class="col-sm-10">
+                                    <input type="number" name="studyTime" class="form-control"
+                                           id="college_studyTime_input" placeholder="学位总学时">
                                 </div>
                             </div>
                         </form>
@@ -66,13 +83,14 @@
         <table id="table" class="table table-responsive table-hover">
             <thead>
             <tr>
-                <td>教授id</td>
-                <td>教授账号</td>
-                <td>账号密码</td>
-                <td>教授姓名</td>
-                <td>手机号</td>
-                <td>学院名称</td>
-                <td>操作</td>
+                <td>学习计划编号</td>
+                <td>学年度</td>
+                <td>已选课程数</td>
+                <td>总费用</td>
+                <td>状态</td>
+                <td>提交学习计划</td>
+                <td>修改学习计划</td>
+                <td>删除学习计划</td>
             </tr>
             </thead>
             <tbody></tbody>
@@ -91,6 +109,15 @@
     <div th:replace="commons::footer"></div>
     <script>
         var click_id,curPage,total,add;
+        function addStudy(){
+            $.ajax({
+                url:'addStudy',
+                success:function (result) {
+                    alert(result.extend.data);
+                    toPageNum(curPage);
+                }
+            })
+        }
         $(function () {
             toPageNum(1);
         });
@@ -98,7 +125,7 @@
             var data=$("#modal form").serialize();
             if (!add){data+="&id="+click_id}
             $.ajax({
-                url: add?'addProfessor':'modifyProfessor',
+                url: add?'addCollege':'modifyCollege',
                 data: data,
                 type: 'post',
                 success: function (result) {
@@ -113,10 +140,11 @@
         });
         function toPageNum(page) {
             $.ajax({
-                url: "getProfessors",
+                url: "getAllStudy",
                 data: "page=" + page,
                 type: "get",
                 success: function (result) {
+                    console.log(result);
                     build_tables(result.extend.pageInfo.list);
                     build_page_info(result.extend.pageInfo);
                     build_page_nav(result.extend.pageInfo);
@@ -128,17 +156,20 @@
             $("#table tbody").empty();
             $.each(result, function (index, item) {
                 var id = $("<td></td>").append(item.id);
-                var account = $("<td></td>").append(item.account);
-                var password = $("<td></td>").append(item.password);
-                var name = $("<td></td>").append(item.name);
-                var phone = $("<td></td>").append(item.phone);
-                var college = $("<td></td>").append(item.college.collegeName);
+                var sem = $("<td></td>").append(item.sem.sem);
+                var orderNum = $("<td></td>").append(item.orderNum);
+                var totalFee = $("<td></td>").append(item.totalFee);
+                var status = $("<td></td>").append(item.status);
+                var submitBtn = $("<button></button>").addClass("btn btn-success btn-sm submit_btn")
+                    .append($("<span></span>").addClass("glyphicon glyphicon-ok")).append("提交");
+                var td1= $("<td></td>").append(submitBtn);
                 var editBtn = $("<button></button>").addClass("btn btn-primary btn-sm edit_btn")
-                    .append($("<span></span>").addClass("glyphicon glyphicon-edit")).append("编辑");
+                    .append($("<span></span>").addClass("glyphicon glyphicon-edit")).append("修改");
+                var td2= $("<td></td>").append(editBtn);
                 var trashBtn = $("<button></button>").addClass("btn btn-danger btn-sm trash_btn")
                     .append($("<span></span>").addClass("glyphicon glyphicon-trash")).append("删除");
-                var btnTd = $("<td></td>").append(editBtn, " ", trashBtn);
-                $("<tr></tr>").append(id, account, password, name, phone, college, btnTd).appendTo("#table tbody").attr("item_id",item.id);
+                var td3 = $("<td></td>").append(trashBtn);
+                $("<tr></tr>").append(id, sem, orderNum, totalFee, status,td1,td2,td3).appendTo("#table tbody").attr("item_id",item.id);
             })
         }
         //构建分页信息
@@ -181,17 +212,7 @@
         //编辑
         $(document).on("click",".edit_btn",function(){
             click_id=$(this).parent().parent().attr("item_id");
-            $.ajax({
-                url: 'getProfessor?id='+click_id,
-                type: 'get',
-                success: function (result) {
-                    var data=result.extend.data;
-                    if (result.code === 100) {
-                        showModal(false,data.account,data.password,data.name,data.phone,data.college.id);
-                    }
-                }
-            })
-
+            top.location="modifyStudy/"+click_id;
         });
         //删除
         $(document).on("click",".trash_btn",function(){
@@ -199,7 +220,7 @@
             var name = $(this).parents("tr").find("td:eq(1)").text();
             if(confirm("确定删除"+name+"吗？")){
                 $.ajax({
-                    url: 'deleteProfessor?id='+click_id,
+                    url: 'deleteCollege?id='+click_id,
                     type: 'get',
                     success: function (result) {
                         toPageNum(curPage);
@@ -208,29 +229,14 @@
                 })
             }
         });
-        function showModal(b,p1,p2,p3,p4,p5) {
+        function showModal(b,p1,p2,p3,p4,p5,p6) {
             add=b;
-            $("#professor_account_input").val(p1);
-            $("#professor_password_input").val(p2);
-            $("#professor_name_input").val(p3);
-            $("#professor_phone_input").val(p4);
-            $.ajax({
-                url: 'getAllColleges',
-                type: 'get',
-                success: function (result) {
-                    $('#professor_collegeId_input').empty();
-                    var data=result.extend.data;
-                    if (result.code === 100) {
-                        $.each(data,function(){
-                            var optionEle = $("<option></option>").append(this.collegeName).attr("value",this.id);
-                            if(!add&&p5===this.id){
-                                optionEle.attr("selected","selected");
-                            }
-                            optionEle.appendTo('#professor_collegeId_input');
-                        });
-                    }
-                }
-            });
+            $("#college_name_input").val(p1);
+            $("#college_manager_input").val(p2);
+            $("#college_address_input").val(p3);
+            $("#college_degreeName_input").val(p4);
+            $("#college_score_input").val(p5);
+            $("#college_studyTime_input").val(p6);
             $("#modal").modal({
                 backdrop:"static"
             });
